@@ -5,25 +5,26 @@ import cn.tuyucheng.taketoday.inmemory.persistence.dao.ManyStudentRepository;
 import cn.tuyucheng.taketoday.inmemory.persistence.dao.ManyTagRepository;
 import cn.tuyucheng.taketoday.inmemory.persistence.dao.StudentRepository;
 import cn.tuyucheng.taketoday.inmemory.persistence.model.*;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import jakarta.annotation.Resource;
+import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.support.AnnotationConfigContextLoader;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.annotation.Resource;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.Assert.assertEquals;
 
-@ExtendWith(SpringExtension.class)
+@RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(classes = {StudentJpaConfig.class}, loader = AnnotationConfigContextLoader.class)
 @Transactional
 @DirtiesContext
-class AdvancedTaggingIntegrationTest {
+public class AdvancedTaggingIntegrationTest {
    @Resource
    private StudentRepository studentRepository;
 
@@ -34,37 +35,37 @@ class AdvancedTaggingIntegrationTest {
    private ManyTagRepository manyTagRepository;
 
    @Test
-   void givenStudentWithSkillTags_whenSave_thenGetByNameAndSkillTag() {
+   public void givenStudentWithSkillTags_whenSave_thenGetByNameAndSkillTag() {
       Student student = new Student(1, "Will");
       SkillTag skill1 = new SkillTag("java", 5);
-      student.setSkillTags(List.of(skill1));
+      student.setSkillTags(Arrays.asList(skill1));
       studentRepository.save(student);
 
       Student student2 = new Student(2, "Joe");
       SkillTag skill2 = new SkillTag("java", 1);
-      student2.setSkillTags(List.of(skill2));
+      student2.setSkillTags(Arrays.asList(skill2));
       studentRepository.save(student2);
 
       List<Student> students = studentRepository.retrieveByNameFilterByMinimumSkillTag("java", 3);
-      assertEquals(1, students.size(), "size incorrect");
+      assertEquals("size incorrect", 1, students.size());
    }
 
    @Test
-   void givenStudentWithKVTags_whenSave_thenGetByTagOk() {
+   public void givenStudentWithKVTags_whenSave_thenGetByTagOk() {
       Student student = new Student(0, "John");
-      student.setKVTags(List.of(new KVTag("department", "computer science")));
+      student.setKVTags(Arrays.asList(new KVTag("department", "computer science")));
       studentRepository.save(student);
 
       Student student2 = new Student(1, "James");
-      student2.setKVTags(List.of(new KVTag("department", "humanities")));
+      student2.setKVTags(Arrays.asList(new KVTag("department", "humanities")));
       studentRepository.save(student2);
 
       List<Student> students = studentRepository.retrieveByKeyTag("department");
-      assertEquals(2, students.size(), "size incorrect");
+      assertEquals("size incorrect", 2, students.size());
    }
 
    @Test
-   void givenStudentWithManyTags_whenSave_theyGetByTagOk() {
+   public void givenStudentWithManyTags_whenSave_theyGetByTagOk() {
       ManyTag tag = new ManyTag("full time");
       manyTagRepository.save(tag);
 
@@ -73,6 +74,6 @@ class AdvancedTaggingIntegrationTest {
       manyStudentRepository.save(student);
 
       List<ManyStudent> students = manyStudentRepository.findByManyTags_Name("full time");
-      assertEquals(1, students.size(), "size incorrect");
+      assertEquals("size incorrect", 1, students.size());
    }
 }
